src/web/snapshots/rustlog__web__tests__root_badges.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /badges/11111
status: 400 Bad Request
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Invalid URL: unknown variant `badges`, expected `channel` or `channelid`
