src/web/snapshots/rustlog__web__tests__user_by_login.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channel/testchan/user/alice/2026/3
status: 503 Service Unavailable
content-type: text/plain; charset=utf-8
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
Twitch token is not ready yet
