src/web/snapshots/rustlog__web__tests__user_month.snap
---
source: src/web/tests.rs
expression: rendered
---
GET /channelid/11111/userid/22222/2026/3
status: 200 OK
content-type: text/plain; charset=utf-8
cache-control: no-cache
x-rustlog-capabilities: arbitrary-range-query,search,stats,namehistory
---
[2026-03-01 07:00:00] #testchan alice: hello world
[2026-03-01 09:00:00] #testchan alice: hello again
[2026-03-15 17:00:00] #testchan alice: mid month
